syntax = "proto3";

option java_package = "com.google.operationsresearch.recordio.test";
option java_outer_classname = "TestProtos";

package recordio.test;

message TestProto {
    string name = 1;
    string value = 2;
}
